# robo-astro-pointer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  archive.c  client  gps.c  gps.h  main.c  main_test.c  pointer.c  robo  robo-astro-pointer  robo-astro-pointer.c  robo_test  temp.tx  util.h
acs/: CMakeLists.txt  acs  acs.c
beitian/: gps  gps.c  magnetometer.c
build2/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt  magnetometer.h
build2/Util/: Makefile  cmake_install.cmake
build_acs/: ACS  CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_acs/Util/: Makefile  cmake_install.cmake
build_gps/: CMakeCache.txt  CTestTestfile.cmake  GPS  Makefile  cmake_install.cmake
build_gps/Util/: Makefile  cmake_install.cmake
build_magnet/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_magnet/Util/: Makefile  cmake_install.cmake
build_telemetry/: CMakeCache.txt  CTestTestfile.cmake  Makefile  TELEMETRY  cmake_install.cmake
build_telemetry/Util/: Makefile  cmake_install.cmake
calibration/: calibrate
commands/: CMakeLists.txt  commands.c
fits/: default.conf  out.fits
gps/: CMakeLists.txt  gps.c
magnetometer/: CMakeLists.txt  magnetometer.c  magnetometer.h.in
pointer/: pointer.c  pointer.h
sextractor/: test.cat
sh/: install_gps.sh  run.sh
src/: CMakeLists.txt
src/acs/: CMakeLists.txt  README.md  acs.c  acs.h.in
src/commands/: CMakeLists.txt  README.MD  commands.h.in
src/gps/: CMakeLists.txt  gps.c  gps.h.in
src/laser-driver/: CMakeLists.txt  README.md  laser-driver.c  laser-driver.h  laser-test.c  lazetest
src/magnetometer/: CMakeLists.txt  config math.txt  magnetometer.c
src/pointer/: CMakeLists.txt  pointer  pointer.c  pointer.h.in  pointer_util.c  pointer_util.h
src/stepper-driver/: CMakeLists.txt  README.md  step-drive-test.c  stepper-driver.c  stepper-driver.h  steptest
src/telemetry/: CMakeLists.txt  telemetry.c  telemetry_util.c
src/util/: CMakeLists.txt  attitude.c  attitude.h  frame.c  frame.h  matrix.c  matrix.h  models.c  models.h  network.h  time_util.c  time_util.h  zhelpers.h
star_tracker/: camera.c  camera.h  source_extractor.c  source_extractor.h  star_tracker.c  star_tracker.h
support/calibration/: calibration.c
telemetry/: CMakeLists.txt  telemetry.c  telemetry.h.in  telemetry_util.c  telemetry_util.h
test/: CMakeLists.txt  attitude_test.c  frame_test.c  matrix_test.c  test_functions.c  test_functions.h  time_test.c
util/: CMakeLists.txt  models.c  models.h  network.c  network.h  registry.h  test  test.c
